test/should-fail/全局变量位置.j
function test takes nothing returns nothing
endfunction
globals
endglobals